[gd_scene load_steps=2 format=3 uid="uid://b6wrrb2g8t6ox"]

[ext_resource type="Script" uid="uid://fpcq5lhdkfxs" path="res://multiplayer_controller.gd" id="1_lti8b"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 131.0
offset_right = 319.0
offset_bottom = 222.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 327.0
offset_top = 131.0
offset_right = 556.0
offset_bottom = 222.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 565.0
offset_top = 134.0
offset_right = 794.0
offset_bottom = 225.0
text = "Start Game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 253.0
offset_top = 24.0
offset_right = 763.0
offset_bottom = 98.0
placeholder_text = "Username"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 172.0
offset_top = 51.0
offset_right = 219.0
offset_bottom = 74.0
text = "Name"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
